[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
diesel = { version = "1.4.8", features = [ "r2d2", "mysql", ] }
diesel_codegen = { version ="0.16.1", features = ["mysql"] }
dotenv = "0.15.0"
