[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
diesel = { version = "1.4.8", features = [ "r2d2", "mysql", ] }
# diesel_codegen = { version ="0.16.1", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde_derive = "1.0.136"
rocket_contrib = "0.4.10"
rocket_codegen = "0.4.10"
cargo-watch = "8.1.1"
